# oxide-edge

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
mongodb-wire-protocol-parser/: Cargo.toml  README.md
mongodb-wire-protocol-parser/src/: lib.rs
mongodb-wire-protocol-parser/tests/: parser.rs
src/: cli.rs  error.rs  lib.rs  log.rs  main.rs  query.rs  server.rs
src/bson/: array.rs  document.rs  mod.rs  value.rs
src/command/: buildinfo.rs  error.rs  find.rs  getcmdlineopts.rs  getlog.rs  getparameter.rs  hello.rs  insert.rs  ismaster.rs  listcollections.rs  listdatabases.rs  mod.rs  ping.rs
src/dal/: mod.rs
src/message/: mod.rs  op_msg.rs  op_msg_reply.rs  op_query.rs  op_query_reply.rs  op_reply.rs
src/server/: connection.rs  mod.rs
src/types/: bson.rs  document.rs  mod.rs  msg_header.rs  op_query.rs  op_reply.rs
tests/: find_test.rs  getlog_test.rs  insert_test.rs  listcollections_test.rs  listdatabases_test.rs  parser.rs
tests/common/: mod.rs
