[package]
edition = "2021"
name = "oxide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.5.0"
futures = "0.3.26"
mongodb-wire-protocol-parser = {path = "../mongodb-wire-protocol-parser"}
thiserror = "1.0.38"
tokio = {version = "1.26.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
