[package]
edition = "2021"
name = "oxide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bson = "2.5.0"
clap = { version = "4.1.8", features = ["derive"] }
dotenvy = "0.15.6"
futures = "0.3.26"
mongodb-wire-protocol-parser = {path = "../mongodb-wire-protocol-parser"}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = {version = "1.26.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
